--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Web_Lapa</title>
 </head>
 <body>
+    <h1>Virsraksts1</h1>
+    <h1>Virsraksts2</h1>
+    <h1>Virsraksts3</h1>
+    <h1>Virsraksts4</h1>
+    <h1>Virsraksts5</h1>
+    <h1>Virsraksts6</h1>
+    
+
     <p>Sveiks manā lapā
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos eaque sit, voluptate nobis labore ea rerum iste porro enim suscipit recusandae. Aliquam repellendus vel doloremque temporibus voluptatum quaerat, in consequatur!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam placeat, eum enim accusamus maiores in molestias nisi quasi, ratione vitae dolorem facere incidunt cum nulla, perferendis maxime sint numquam rem?
