--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </ol>
 
     <a href="#">Nospied mani!</a>
-    <a href="www.google.lv">Meklē šeit!</a>
+    <a href="https://google.lv">Meklē šeit!</a>
     </body>
 </body>
 </html>
