--- a/index.html
+++ b/index.html
@@ -43,5 +43,9 @@
     <a href="#">Nospied mani!</a>
     <a href="https://google.lv">Meklē šeit!</a>
     </body>
+
+    <img src="attēli/2022-04-22_2130190_clean.jpg"> 
+
+
 </body>
 </html>
