--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <a href="https://google.lv">Meklē šeit!</a>
     </body>
 
-    <img src="attēli/2022-04-22_2130190_clean.jpg"> 
+    <img src="attēli/2022-04-22_2130190_clean.jpg" alt="Velosipēds">
 
 
 </body>
