--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </body>
 
     <img src="attēli/2022-04-22_2130190_clean.jpg" alt="Velosipēds">
-
+    <img src="https://www.fenikssfun.com/cache/images/2176473700/1_177529694.jpg" alt="Bilde">
 
 </body>
 </html>
